<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TelaIPrincipal">

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLabel"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Digite seu nome"
        android:inputType="textPersonName"
        android:text="@string/edtNome" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Digite seu email"
        android:inputType="textEmailAddress"
        android:text="@string/edtEmail" />

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Digite seu telefone"
        android:inputType="phone"
        android:text="@string/edtTelefone" />

    <EditText
        android:id="@+id/edtEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Digite seu endereço"
        android:inputType="textPersonName"
        android:text="@string/edtEnd" />

    <EditText
        android:id="@+id/edtCurso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Digite seu curso"
        android:inputType="textPersonName"
        android:text="@string/edtCurso" />

    <Button
        android:id="@+id/btnNextScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNextScreen" />
</LinearLayout>